--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:tsc": "tsc",
     "start:tsc": "probot run ./lib/index.js",
     "start": "node -r dotenv/config ./dist/index.js",
-    "build": "rm -rf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript && ncc build src/github-action.cjs -o action",
+    "build": "rm -rf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript && ncc build src/github-action.cjs -o action && copyfiles ./.env dist/",
     "test": "jest"
   },
   "dependencies": {
@@ -37,6 +37,7 @@
     "@types/node": "^18.0.0",
     "@types/pino-std-serializers": "^4.0.0",
     "@vercel/ncc": "^0.36.1",
+    "copyfiles": "^2.4.1",
     "esbuild": "^0.17.7",
     "jest": "^29.0.0",
     "nock": "^13.0.5",
